# internet-tehnologije-2025-vebigrazaucenjevebtehnologija_2022_0509

./: Leaderboard.tsx  README.md  docker-compose.yaml
grid-chess-back/: .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml
grid-chess-back/app/: .env.example  main.py
grid-chess-back/app/api/: admin.py  auth.py  deps.py  leaderboard.py  levels.py  users.py
grid-chess-back/app/core/: config.py  security.py
grid-chess-back/app/db/: session.py
grid-chess-back/app/models/: models.py
grid-chess-back/app/schemas/: level.py  user.py
grid-chess-back/app/scripts/: create_admin.py  seed_levels.py
grid-chess-front/: Dockerfile  package-lock.json  package.json  tsconfig.json
grid-chess-front/src/: App.tsx
grid-chess-front/src/api/: axios.ts
grid-chess-front/src/components/common/: ChessBoard.tsx  CustomButton.tsx  InputField.tsx  LevelCard.tsx  Navbar.tsx  SuccessModal.tsx
grid-chess-front/src/pages/: Dashboard.tsx  Leaderboard.tsx  Login.tsx  Profile.tsx  Register.tsx
grid-chess-front/src/types/: index.ts
